<resources>
    <string name="app_name">DuesClerk</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="title_activity_signin_signup">SignInSignUp</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_email_verification">Email verification</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_contact_data">ContactsActivity</string>
    <string name="title_updating_profile">Updating profile</string>
    <string name="title_updating_password">Updating password</string>
    <string name="title_mailing_email_verification_code">Sending verification code</string>
    <string name="title_verifying_email_address">Verifying email address</string>
    <string name="title_resetting_password">Verifying email address</string>
    <string name="title_fragment_people_i_owe">Those I Owe</string>
    <string name="title_fragment_people_owing_me">Owing Me</string>
    <string name="tittle_fragment_app_menu">Menu</string>
    <string name="title_fragment_sign_in">SignIn</string>
    <string name="title_fragment_sign_up">SignUp</string>
    <string name="title_fragment_sign_in_sign_up">SignIn SignUp Activity</string>
    <string name="title_signing_up">Signing you up</string>
    <string name="title_signing_in">Signing you in</string>
    <string name="title_debts_people_owing_me">Money %1$s owes me.</string>
    <string name="title_debts_people_i_owe">Money I owe %1$s.</string>
    <string name="title_adding_contact">Adding contact</string>
    <string name="title_updating_contact">Updating contact</string>
    <string name="title_deleting_contact">Deleting contact</string>
    <string name="title_adding_debt">Adding debt</string>
    <string name="title_updating_debt">Updating debt</string>
    <string name="title_deleting_debt">Deleting debt</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_country_name">Country</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_account_type">Account type</string>
    <string name="hint_signup_date">Signup date</string>
    <string name="hint_feedback">Feedback</string>
    <string name="hint_account_type_free">Free Account</string>
    <string name="hint_account_type_pro">Pro Account</string>
    <string name="hint_full_name_or_business_name">Full name or business name</string>
    <string name="hint_address">Address</string>
    <string name="hint_contacts_type">Contacts type</string>
    <string name="hint_optional">(Optional)</string>
    <string name="hint_contacts_total_amount">Total amount</string>
    <string name="hint_search_countries">Search countries</string>
    <string name="hint_search_contacts">Search contacts</string>
    <string name="hint_search_debts">Search debts</string>
    <string name="hint_date_issued">Date issued</string>
    <string name="hint_issued">Issued</string>
    <string name="hint_date_due">Date due</string>
    <string name="hint_due">Due</string>
    <string name="hint_date_added">Date added</string>
    <string name="hint_debt_amount">Debt amount</string>
    <string name="hint_description">Description</string>
    <string name="hint_debt_description">Debt description</string>
    <string name="hint_debt_type_you_owe">You owe</string>
    <string name="hint_debt_type_you_are_owed">You are owed</string>
    <string name="hint_not_provided">Not provided</string>
    <string name="hint_name_abbreviation">N</string>
    <string name="hint_number_of_debts">%1$s debts</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_close">Close</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_help_center">Help Center</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="action_update_contact">Update contact</string>
    <string name="action_delete_contact">Delete contact</string>
    <string name="action_verify">Verify</string>
    <string name="action_try_again">Try again</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change">Change</string>
    <string name="action_switch_account_type">Switch to %1$s</string>
    <string name="action_resend_code">Resend code</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_already_have_code">I already have a code</string>
    <string name="string_hello">Hello %1$s</string>
    <string name="action_send_code">Send code</string>
    <string name="action_did_not_receive_code">I did not receive my code!</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_add_debt">Add debt</string>
    <string name="action_update_debt">Update debt</string>
    <string name="action_goto_settings">GoTo Settings</string>
    <string name="label_create_your_account">Create Your Account</string>
    <string name="label_sign_in_to_your_account">Sign In to your account</string>
    <string name="label_change_account_password">Change account password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_verification">Verification</string>
    <string name="label_enter_email_address">Enter email address</string>
    <string name="label_create_password">Create Password</string>
    <string name="label_add_contact_or_person">Add contact or person</string>
    <string name="label_edit_contact_or_person">Edit contact or person</string>
    <string name="label_add_debt">Add debt</string>
    <string name="label_update_debt">Update debt</string>
    <string name="label_grant_permissions">Grant Permissions</string>
    <string name="label_debts_total_amount">Total debts amount : %1$s</string>
    <string name="label_delete_contact">Delete contact!</string>
    <string name="label_delete_debt">Delete debt!</string>
    <string name="label_the_selected_contacts">the selected contacts</string>
    <string name="label_the_selected_debts">the selected debts</string>
    <string name="label_add_optional_contact_info">Add optional contact information</string>
    <string name="label_fragment_people_i_owe">Those I\nOwe</string>
    <string name="label_fragment_people_owing_me">Owing\nMe</string>
    <string name="label_about_application">About application</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_debts">Debts</string>
    <string name="label_sort">Sort %1$s</string>
    <string name="label_sort_by_name">Sort by name</string>
    <string name="label_sort_by_amount">Sort by amount</string>
    <string name="label_sort_by_number_of_debts">Sort by no. of debts</string>
    <string name="label_sort_by_date_issued">Sort by date issued</string>
    <string name="label_sort_by_date_due">Sort by date due</string>
    <string name="label_sort_by_debt_date_added">Sort by date debt added</string>
    <string name="msg_company_tag_line">Manage your dues with ease.</string>
    <string name="msg_welcome_to">Welcome to %1$s.</string>
    <string name="msg_updating_profile">Updating your profile! Please wait…</string>
    <string name="msg_updating_profile_successful">Profile updated successfully.</string>
    <string name="msg_updating_password">Updating your password! Please wait…</string>
    <string name="msg_updating_password_successful">Password updated successfully.</string>
    <string name="msg_mailing_email_verification_code">Mailing you a verification code! Please wait…</string>
    <string name="msg_email_address_verified">Your email address has been verified!</string>
    <string name="msg_verification_code_sent">Verification code sent to your email.</string>
    <string name="msg_verifying_email_address">Verifying email address! Please wait…</string>
    <string name="msg_resetting_password">We are resetting your password! Please wait…</string>
    <string name="msg_send_verification_code_message">"We\'re glad you're here.\n\nWe just need to confirm that the email you are using belongs to you.\nClick the button below to receive your email verification code."</string>
    <string name="msg_email_verification_message">"Check your email for the verification code and enter it below.\nIf you didn't receive a code, click send verification code below to receive your code on email."</string>
    <string name="msg_password_reset_successful">Password Reset Successfully</string>
    <string name="msg_password_reset_successful_long">Your password has ben reset.\nClick sign in below to sign in into you account!</string>
    <string name="msg_enter_password_confirm_password">Enter your new password below\nand confirm it.</string>
    <string name="msg_enter_email_address_associated_with_account">Please enter the email address associated\nwith your account</string>
    <string name="msg_we_will_email_you_a_code">We will email you a code to reset your password</string>
    <string name="msg_enter_verification_code_to_verify_account">Please enter the code below to verify your account.</string>
    <string name="msg_logout">Are you sure you want to log out %1$s?</string>
    <string name="msg_signing_up">We are creating your account! Please wait…</string>
    <string name="msg_signing_in">We are signing you in! Please wait…</string>
    <string name="msg_contacts_empty">You have not added any contacts yet.\nAll your saved contacts will be shown here.\n\nYou can add new ones.</string>
    <string name="msg_debts_empty">No debts found for %1$s.\nAll added debts will be shown here.\n\nYou can add new ones.</string>
    <string name="msg_adding_contact">Adding %1$ss\' contact! Please wait…</string>
    <string name="msg_contact_adding_successful">%1$s has been added successfully.</string>
    <string name="msg_adding_debt">Adding %1$ss\' debt! Please wait…</string>
    <string name="msg_debt_adding_successful">%1$s has been added to %2$s.</string>
    <string name="msg_updating_contact">Updating contact! Please wait…</string>
    <string name="msg_updating_contact_successful">Contact updated successfully.</string>
    <string name="msg_updating_debt">Updating debt! Please wait…</string>
    <string name="msg_updating_debt_successful">Debt updated successfully.</string>
    <string name="msg_deleting_contact">Deleting contact! Please wait…</string>
    <string name="msg_deleting_contact_successful">Contact%1$s deleted successfully.</string>
    <string name="msg_delete_contact_confirmation">You are about to delete %1$s and all associated debt records. This cannot be undone.\n\nDo you wish to proceed?</string>
    <string name="msg_grant_permission_message">This application needs %1$s permission to %2$s. You can grant them in the app settings.</string>
</resources>