<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/msg_enter_email_address_associated_with_account"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/msg_we_will_email_you_a_code"
                android:textAlignment="center"
                android:textSize="13sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:hint="@string/label_enter_email_address"
                    android:textColor="@color/colorBlack"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxStrokeColor="@color/colorWhite"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="-1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="-1"
                    app:layout_constraintWidth_percent=".5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editForgotPassword_EmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@null"
                        android:imeActionLabel="@string/action_done"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLength="300"
                        android:paddingBottom="0dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/textForgotPassword_AlreadyHaveCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/action_already_have_code"
                android:textColor="@color/colorBlue900"
                android:textSize="@dimen/dimen_text_view_links_size_normal"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llForgotPassword_SendCode"
            style="@style/Style_CustomButton_Container_Fill_Primary_Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/Style_LinearLayout_Button_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_send_code"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
