<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/inset_dialog_background_rounded"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textGrantPermission_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"
            android:text="@string/label_grant_permissions"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGrantPermission_Title"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".6">

            <TextView
                android:id="@+id/textGrantPermission_Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_grant_permission_message"
                android:singleLine="false"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textGrantPermission_Cancel"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/action_cancel"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textGrantPermission_GOTOSettings"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/action_goto_settings"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
