<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="-1"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".9">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEmailVerification_SendCode_Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/msg_send_verification_code_message"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/dimen_email_verification_message_text_size" />

            <LinearLayout
                android:id="@+id/llEmailVerification_SendVerificationCode"
                style="@style/Style_CustomButton_Container_Fill_Primary_Dark"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_email_verification_button_height"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Style_CustomButton_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_send_code"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEmailVerification_AlreadyHaveCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/action_already_have_code"
                android:textColor="@color/colorBlue900"
                android:textSize="@dimen/dimen_email_verification_link_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>